--- a/My Memes/Base.lproj/Main.storyboard
+++ b/My Memes/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="My_Memes" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +16,154 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPL-ym-BeB">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem title="Album" id="7E3-vI-bBk">
+                                        <connections>
+                                            <action selector="loadImageAlbum:" destination="vXZ-lx-hvc" id="hlJ-fv-6cR"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="nC8-S1-mo0"/>
+                                    <barButtonItem systemItem="camera" id="qCw-aD-Brc">
+                                        <connections>
+                                            <action selector="loadImageCamera:" destination="vXZ-lx-hvc" id="mZk-2u-KYr"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TPq-ur-zFh">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <items>
+                                    <navigationItem title="My Memes" id="NgL-wa-UCW">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="13P-jw-STL">
+                                            <connections>
+                                                <action selector="activityView:" destination="vXZ-lx-hvc" id="2DV-sz-j5L"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ws2-P2-fgi">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="64" width="368" height="492"/>
+                                </variation>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FHk-w7-0HL">
+                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="lLh-hn-5MR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="lLh-hn-5MR"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="50" y="72" width="301" height="30"/>
+                                    <mask key="constraints">
+                                        <include reference="lLh-hn-5MR"/>
+                                    </mask>
+                                </variation>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yl7-iv-eTS">
+                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="SoU-3F-6f0"/>
+                                    <constraint firstAttribute="height" constant="35" id="ZGP-nB-NPO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="SoU-3F-6f0"/>
+                                        <exclude reference="ZGP-nB-NPO"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="50" y="518" width="301" height="30"/>
+                                    <mask key="constraints">
+                                        <include reference="SoU-3F-6f0"/>
+                                        <include reference="ZGP-nB-NPO"/>
+                                    </mask>
+                                </variation>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="Yl7-iv-eTS" secondAttribute="trailing" constant="33" id="1xw-U7-jKI"/>
+                            <constraint firstItem="bPL-ym-BeB" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="80V-4q-t8h"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="FHk-w7-0HL" secondAttribute="trailing" constant="33" id="943-qQ-pkj"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="TPq-ur-zFh" secondAttribute="trailing" constant="-16" id="96o-uT-uU9"/>
+                            <constraint firstItem="TPq-ur-zFh" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="ENT-GP-k9g"/>
+                            <constraint firstItem="FHk-w7-0HL" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="34" id="InL-YT-dLg"/>
+                            <constraint firstItem="Yl7-iv-eTS" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="34" id="Q46-xK-cDv"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="bPL-ym-BeB" secondAttribute="bottom" id="cZQ-bE-9FQ"/>
+                            <constraint firstItem="FHk-w7-0HL" firstAttribute="top" secondItem="TPq-ur-zFh" secondAttribute="bottom" constant="8" id="dlf-Ih-nFx"/>
+                            <constraint firstItem="bPL-ym-BeB" firstAttribute="top" secondItem="Yl7-iv-eTS" secondAttribute="bottom" constant="8" id="f5f-2T-N1K"/>
+                            <constraint firstItem="TPq-ur-zFh" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="okR-Kb-hub"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bPL-ym-BeB" secondAttribute="trailing" constant="-16" id="rQV-su-0tk"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="bPL-ym-BeB"/>
+                                <exclude reference="TPq-ur-zFh"/>
+                                <exclude reference="ws2-P2-fgi"/>
+                                <exclude reference="FHk-w7-0HL"/>
+                                <exclude reference="Yl7-iv-eTS"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="96o-uT-uU9"/>
+                                <exclude reference="ENT-GP-k9g"/>
+                                <exclude reference="okR-Kb-hub"/>
+                                <exclude reference="943-qQ-pkj"/>
+                                <exclude reference="InL-YT-dLg"/>
+                                <exclude reference="dlf-Ih-nFx"/>
+                                <exclude reference="1xw-U7-jKI"/>
+                                <exclude reference="Q46-xK-cDv"/>
+                                <exclude reference="80V-4q-t8h"/>
+                                <exclude reference="f5f-2T-N1K"/>
+                                <exclude reference="rQV-su-0tk"/>
+                                <exclude reference="cZQ-bE-9FQ"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="bPL-ym-BeB"/>
+                                <include reference="TPq-ur-zFh"/>
+                                <include reference="ws2-P2-fgi"/>
+                                <include reference="FHk-w7-0HL"/>
+                                <include reference="Yl7-iv-eTS"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="96o-uT-uU9"/>
+                                <include reference="ENT-GP-k9g"/>
+                                <include reference="okR-Kb-hub"/>
+                                <include reference="943-qQ-pkj"/>
+                                <include reference="InL-YT-dLg"/>
+                                <include reference="dlf-Ih-nFx"/>
+                                <include reference="1xw-U7-jKI"/>
+                                <include reference="Q46-xK-cDv"/>
+                                <include reference="80V-4q-t8h"/>
+                                <include reference="f5f-2T-N1K"/>
+                                <include reference="rQV-su-0tk"/>
+                                <include reference="cZQ-bE-9FQ"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="bottomText" destination="Yl7-iv-eTS" id="Cgs-hh-pZG"/>
+                        <outlet property="memeImage" destination="ws2-P2-fgi" id="HsW-4D-XGI"/>
+                        <outlet property="topText" destination="FHk-w7-0HL" id="DF2-H8-Qkg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="379.5" y="305"/>
         </scene>
     </scenes>
 </document>
